@@ -329,16 +329,29 @@ BindAction Binder::apply(Flow* flow, Binding* pb)
     init_flow(flow);
     Inspector* ins;
 
-    if ( !pb->use.name.size() || pb->use.name == "wizard" )
+    if ( pb->use.name == "wizard" )
     {
         ins = InspectorManager::get_wizard();
-        flow->set_clouseau(ins);
+        if ( ins )
+            flow->set_clouseau(ins);
     }
-    else
+    else if ( pb->use.name.size() )
     {
         ins = InspectorManager::get_inspector(pb->use.name.c_str()); 
         if ( ins )
             flow->set_gadget(ins);
+    }
+    else if ( pb->use.svc.size() )
+    {
+        ins = InspectorManager::get_inspector(pb->use.svc.c_str()); 
+        if ( ins )
+            flow->set_gadget(ins);
+    }
+    else
+    {
+        ins = InspectorManager::get_wizard();
+        if ( ins )
+            flow->set_clouseau(ins);
     }
     return BA_INSPECT;
 }
