@@ -7,6 +7,7 @@
 -- delete bogus code introduced into hi paf
 -- ip defrag fixes
 -- refactored splitter fallback
+-- fix binder.use.service
 
 125
 -- discovered can't catch exceptions thrown from Lua to C++; need to
